--- a/pagination/styles.css
+++ b/pagination/styles.css
@@ -1,6 +1,7 @@
 .App {
-  font-family: sans-serif;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 table {
@@ -19,4 +20,29 @@ th {
 thead,
 tr:nth-child(even) {
   background-color: #dddddd;
+}
+
+.loader-outer {
+  height: 90%;
+  display: flex;
+  align-items: center;
+  position: absolute;
+}
+
+.loader {
+  width: 70px;
+  height: 70px;
+  border: 7px solid #aaa;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
